# md2html

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml
src/: file_writer.rs  html_formatter.rs  lib.rs  main.rs  markdown_parser.rs
tests/: cli.rs
